--- a/githubhomepage.css
+++ b/githubhomepage.css
@@ -498,7 +498,7 @@ nav {
 
 footer {
   background-color: #18171b;
-  color: #fff;
+  color: #999090;
   padding: 50px 0;
 }
 
@@ -527,7 +527,7 @@ footer {
 }
 
 .column ul li a {
-  color: #fff;
+  color: #9e8e8e;
   text-decoration: none;
 }
 
@@ -545,14 +545,14 @@ footer {
 
 .newsletter button {
   background-color: #007ec6;
-  color: #fff;
+  color: #b9adad;
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   .footer-container {
     flex-direction: column;
     align-items: center;
@@ -562,4 +562,4 @@ footer {
     width: 100%;
     margin-bottom: 30px;
   }
-}
+} */
